improvement: present phone numer as link with 'tel:' protocol as it can be used to quickly make call to customer from ticket view form

--- a/templates/default/rt/rtticketinfobox.html
+++ b/templates/default/rt/rtticketinfobox.html
@@ -421,7 +421,12 @@
 		<TD style="width: 1%;" class="dark nobr">
 			<span class="bold"><A href="?m=customerinfo&amp;id={$ticket.customerid}">{$customerinfo.customername}</A></span>
 			{icon name="home"} {$customerinfo.address} &nbsp;{$customerinfo.zip} {$customerinfo.city}
-			{if $customerinfo.phone}{icon name="phone" label="{$customerinfo.phone}"}{/if}
+			{if $customerinfo.phone}
+				<a class="phone_number" href="tel:{$customerinfo.phone|escape}">
+					{icon name="phone"}
+					{$customerinfo.phone|escape}
+				</a>
+			{/if}
 			{icon name="money"} {if $customerinfo.balance < 0}<span class="red">{/if}{$customerinfo.balance|money_format}{if $customerinfo.balance < 0}</span>{/if}
 		</TD>
 		<TD style="width: 98%;" class="dark text-right red bold">
