improvement: more ui ergonomy

--- a/templates/default/traffic/traffic.html
+++ b/templates/default/traffic/traffic.html
@@ -186,10 +186,10 @@
 	<tr {tip text="Nodes depiction way on charts"}>
 		<td>
 			<img src="img/ip.gif">
-		</TD>
+		</td>
 		<td>
 			<label for="showips">
-				{trans("IP addresses instead of nodes names")}
+				<strong>{trans("IP addresses instead of nodes names")}</strong>
 			</label>
 		</td>
 		<td>
