--- a/css/style.less
+++ b/css/style.less
@@ -2475,6 +2475,9 @@ table.lms-ui-mac-address-selection {
 			visibility: visible;
 			cursor: pointer;
 		}
+		.mac-selector {
+			margin-left: 0.4em;
+		}
 	}
 }
 
