--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -88,7 +88,7 @@
 													<option value="0">{trans("- automatic selection -")}</option>
 													{foreach $networks as $net}
 														<option value="{$net.id}" data-pubnetid="{$net.pubnetid}"
-																{if $net.id == $nodeinfo.netid} selected{/if}
+																{if $net.id == $nodedata.netid} selected{/if}
 																{if $net.disabled == 1} class="lms-ui-alert"{/if}>{$net.name|truncate:20:"":true}: {$net.address}/{$net.prefix}</option>
 													{/foreach}
 												</select>
@@ -141,7 +141,7 @@
 											</td>
 											<td>
 												<input type="hidden" name="nodedata[pubnetid]"
-													value="{if $nodedata.pubnetid}{$nodeinfo.pubnetid}{else}0{/if}">
+													value="{if $nodedata.pubnetid}{$nodedata.pubnetid}{else}0{/if}">
 												<input type="text" name="nodedata[ipaddr_pub]"
 													placeholder="{trans("Pub. IP address")}"
 													value="{$nodedata.ipaddr_pub}" {tip trigger="ipaddr_pub"}>
