bugfix: visual fixes

--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -330,9 +330,9 @@
 											<label>
 												<input type="checkbox" name="nodedata[chkmac]" value="1" id="chkmac"
 													{tip text="Enable/disable MAC address checking" trigger="chkmac"}
-													{if $nodedata.chkmac} checked{/if}>&nbsp;
+													{if $nodedata.chkmac} checked{/if}>
 												{trans("MAC checking")}
-											</label><
+											</label>
 											<label>
 												<input type="checkbox" name="nodedata[halfduplex]" value="1" id="halfduplex"
 													{tip text="Select transmission mode"}
