--- a/templates/default/node/nodeeditbox.html
+++ b/templates/default/node/nodeeditbox.html
@@ -375,7 +375,7 @@
 											<label>
 												<input type="checkbox" name="nodeedit[chkmac]" value="1" id="chkmac"
 													{tip text="Enable/disable MAC address checking" trigger="chkmac"}
-													{if !isset($nodeinfo.chkmac) || $nodeinfo.chkmac} checked{/if}>&nbsp;
+													{if !isset($nodeinfo.chkmac) || $nodeinfo.chkmac} checked{/if}>
 												{trans("MAC checking")}
 											</label>
 
