bugfix: allow to use html code in event description

--- a/templates/default/event/eventinfo.html
+++ b/templates/default/event/eventinfo.html
@@ -67,7 +67,7 @@
 						<table style="width: 95%;">
 							<tr>
 								<td class="fall superlight">
-									{$event.description|escape|replace:"\n":"<BR>"}
+									{$event.description|replace:"\n":"<BR>"}
 								</td>
 							</tr>
 						</table>
