--- a/templates/default/node/nodegrouplist.html
+++ b/templates/default/node/nodegrouplist.html
@@ -2,122 +2,133 @@
 {block name=title}LMS: {$layout.pagetitle|striphtml}{/block}
 {block name=module_content}
 <!--// $Id$ //-->
-<H1>{$layout.pagetitle}</H1>
-<TABLE class="lmsbox lms-ui-background-cycle">
-	<COLGROUP>
-		<COL style="width: 97%;">
-		<COL style="width: 1%;">
-		<COL style="width: 1%;">
-		<COL style="width: 1%;">
-	</COLGROUP>
-	<THEAD>
-	<TR>
-		<TD>
-			<IMG src="img/nodegroup.gif" alt="">&nbsp;<span class="bold">{trans("Name:")}</span><BR>
-			<IMG src="img/info1.gif" alt="">&nbsp;{trans("Description:")}
-		</TD>
-		<TD class="text-right">
-			{trans("ID:")}
-		</TD>
-		<TD class="text-right">
-			{trans("Members:")}
-		</TD>
-		<TD class="text-right bold nobr">
-			{t a=$listdata.total|default:"0"}Total: $a{/t}
-		</TD>
-	</TR>
-	</THEAD>
-	<TFOOT>
-	<TR>
-		<TD colspan="2" class="text-right bold">
-			<IMG src="img/info2.gif" alt="">&nbsp;{trans("Total:")}
-		</TD>
-		<TD class="text-right bold nobr">
-			{$listdata.nodestotal|default:"0"}
-		</TD>
-		<TD>
-			&nbsp;
-		</TD>
-	</TR>
-	</TFOOT>
-	<TBODY id="nodegrouplist">
-	{foreach $nodegrouplist as $nodegroup}
-	<TR class="highlight" data-nodegroup-id="{$nodegroup.id}" data-name="{$nodegroup.name}">
-		<TD onClick="return self.location.href='?m=nodegroupinfo&id={$nodegroup.id}';">
-			<IMG src="img/nodegroup.gif" alt="">&nbsp;<span class="bold">{$nodegroup.name}</span><BR>
-			{if $nodegroup.description}<IMG src="img/info1.gif" alt="">&nbsp;{$nodegroup.description}{/if}
-		</TD>
-		<TD class="text-right" onClick="return self.location.href='?m=nodegroupinfo&id={$nodegroup.id}';">
-			({$nodegroup.id|string_format:"%04d"})
-		</TD>
-		<TD style="width: 1%;" class="text-right" onClick="return self.location.href='?m=nodegroupinfo&id={$nodegroup.id}';">
-			{$nodegroup.nodescount}
-		</TD>
-		<TD style="width: 1%;" class="text-right nobr">
-			{if $nodegroup.nodescount}
-				<A class="delete-nodegroup-alert" href="#">
-			{else}
-				<A class="delete-nodegroup"href="?m=nodegroupdel&id={$nodegroup.id}">
-			{/if}<IMG src="img/delete.gif" alt="{trans("Delete")}" title="{trans("Delete")}"></A>
-			<A href="?m=nodegroupedit&id={$nodegroup.id}"><IMG src="img/edit.gif" alt="{trans("Edit")}" title="{trans("Edit")}"></A>
-			<A href="?m=nodegroupinfo&id={$nodegroup.id}"><IMG src="img/info.gif" alt="{trans("Info")}" title="{trans("Info")}"></A>
-		</TD>
-	</TR>
-	{foreachelse}
-	<tr>
-		<td colspan="4" class="empty-table">
-			{trans("There are no such groups in database.")}
-		</td>
-	</tr>
-	{/foreach}
-	</TBODY>
-	<script>
-		$(function() {
-			$('#nodegrouplist').sortable({
-				items: "> tr[data-nodegroup-id]",
-				opacity: 0.9,
-				axis: "y",
-				placeholder: "light",
-				update: function(event, ui) {
-					var nodegroupids = [];
-					ui.item.parent().children('tr[data-nodegroup-id]').each(function(index, value) {
-						nodegroupids.push($(this).attr('data-nodegroup-id'));
-					});
-					$.ajax('?m=nodegrouplist', {
-						method: "POST",
-						data: {
-							nodegroupids: nodegroupids
-						},
-						dataType: "json",
-						success: function(data, textStatus, qXHR) {
-							if (data.result === undefined || data.result != 'OK') {
-								$('#nodegrouplist').sortable('cancel');
-								alertDialog($t("LMS: operation failed!"));
-							}
-						},
-						error: function(jqXHR, textStatus, errorThrown) {
+<h1>{$layout.pagetitle}</h1>
+<table class="lmsbox lms-ui-background-cycle">
+	<colgroup>
+		<col style="width: 97%;">
+		<col style="width: 1%;">
+		<col style="width: 1%;">
+		<col style="width: 1%;">
+	</colgroup>
+	<thead>
+		<tr>
+			<td>
+				{icon name="nodegroup"}
+				<strong>{trans("Name")}</strong>
+				<br>
+				{icon name="info"}
+				{trans("Description")}
+			</td>
+			<td class="text-right">
+				{trans("ID")}
+			</td>
+			<td class="text-right">
+				{trans("Members")}
+			</td>
+			<td class="text-right nobr">
+				<strong>{t a=$listdata.total|default:"0"}Total: $a{/t}</strong>
+			</td>
+		</tr>
+	</thead>
+	<tfoot>
+		<tr>
+			<td colspan="2" class="text-right bold">
+				{icon name="info"}
+				{trans("Total:")}
+			</td>
+			<td class="text-right nobr">
+				<strong>{$listdata.nodestotal|default:"0"}</strong>
+			</td>
+			<td>
+				&nbsp;
+			</td>
+		</tr>
+	</tfoot>
+	<tbody id="nodegrouplist">
+		{foreach $nodegrouplist as $nodegroup}
+			<tr class="highlight" data-nodegroup-id="{$nodegroup.id}" data-name="{$nodegroup.name}">
+				<td data-target-url="?m=nodegroupinfo&id={$nodegroup.id}">
+					{icon name="nodegroup"}
+					<strong>{$nodegroup.name}</strong>
+					<br>
+					{if $nodegroup.description}
+						{icon name="info"}
+						{$nodegroup.description|escape}
+					{/if}
+				</td>
+				<td class="text-right" data-target-url="?m=nodegroupinfo&id={$nodegroup.id}">
+					(#{$nodegroup.id})
+				</td>
+				<td class="text-right" data-target-url="?m=nodegroupinfo&id={$nodegroup.id}">
+					{$nodegroup.nodescount}
+				</td>
+				<td class="text-right nobr">
+					{if $nodegroup.nodescount}
+						{button type="link" icon="delete" tip="Delete" class="delete-nodegroup-alert"}
+					{else}
+						{button type="link" icon="delete" tip="Delete" class="delete-nodegroup"
+							data_href="?m=nodegroupdel&id={$nodegroup.id}"}
+					{/if}
+					{button type="link" icon="edit" tip="edit" href="?m=nodegroupedit&id={$nodegroup.id}"}
+					{button type="link" icon="info" tip="Info" href="?m=nodegroupinfo&id={$nodegroup.id}"}
+				</td>
+			</tr>
+		{foreachelse}
+			<tr>
+				<td colspan="4" class="empty-table">
+					{trans("There are no such groups in database.")}
+				</td>
+			</tr>
+		{/foreach}
+	</tbody>
+</table>
+<script>
+
+	$(function() {
+		$('#nodegrouplist').sortable({
+			items: "> tr[data-nodegroup-id]",
+			opacity: 0.9,
+			axis: "y",
+			placeholder: "light",
+			update: function(event, ui) {
+				var nodegroupids = [];
+				ui.item.parent().children('tr[data-nodegroup-id]').each(function(index, value) {
+					nodegroupids.push($(this).attr('data-nodegroup-id'));
+				});
+				$.ajax('?m=nodegrouplist', {
+					method: "POST",
+					data: {
+						nodegroupids: nodegroupids
+					},
+					dataType: "json",
+					success: function(data, textStatus, qXHR) {
+						if (data.result === undefined || data.result != 'OK') {
 							$('#nodegrouplist').sortable('cancel');
-							alertDialog($t("AJAX: Invalid result - status: $a", textStatus));
+							alertDialog($t("LMS: operation failed!"));
 						}
-					});
-				}
-			});
+					},
+					error: function(jqXHR, textStatus, errorThrown) {
+						$('#nodegrouplist').sortable('cancel');
+						alertDialog($t("AJAX: Invalid result - status: $a", textStatus));
+					}
+				});
+			}
 		});
-	</script>
-</TABLE>
-	<script>
+
 		$('.delete-nodegroup').click(function() {
 			var name = $(this).closest('tr').attr('data-name');
-			console.log('name=', name);
 			confirmDialog($t("Are you sure, you want to remove group '$a'?", name), this).done(function() {
-				location.href = $(this).attr('href');
+				location.href = $(this).attr('data-href');
 			});
 			return false;
 		});
+
 		$('.delete-nodegroup-alert').click(function() {
 			var name = $(this).closest('tr').attr('data-name');
 			alertDialog($t("Group '$a' has members and cannot be deleted!", name), this);
-			return;
+			return false;
 		});
-	</script>
+	});
+
+</script>
 {/block}
