improvement/devel: refreshed node group forms (visual fixes)

--- a/templates/default/node/nodegroupedit.html
+++ b/templates/default/node/nodegroupedit.html
@@ -11,6 +11,10 @@
 		align-items: center;
 	}
 
+	.cell-flex :not(:last-child) {
+		margin-right: 0.5em;
+	}
+
 </style>
 
 <h1>{$layout.pagetitle}</h1>
