improvement: allow to use national characters in customer and node group names (bugfix)

--- a/templates/default/customer/customergroupadd.html
+++ b/templates/default/customer/customergroupadd.html
@@ -23,7 +23,7 @@
 			</td>
 			<td>
 				<input type="text" name="customergroupadd[name]" value="{$customergroupadd.name}" size="50" required
-					form="customergroupadd" {tip trigger="name" bold=1}>
+					maxlength="255" form="customergroupadd" {tip trigger="name" bold=1}>
 			</td>
 		</tr>
 	</thead>
