--- a/templates/default/node/nodegroupadd.html
+++ b/templates/default/node/nodegroupadd.html
@@ -20,8 +20,8 @@
 				<strong>{trans("Name")}</strong>
 			</td>
 			<td>
-				<input type="text" name="nodegroupadd[name]"
-					value="{$nodegroupadd.name|escape}" required {tip trigger="name" bold=1}>
+				<input type="text" name="nodegroupadd[name]" value="{$nodegroupadd.name|escape}"
+					maxlength="255" required {tip trigger="name" bold=1}>
 			</td>
 		</tr>
 	</thead>
