--- a/templates/default/customer/customergroupedit.html
+++ b/templates/default/customer/customergroupedit.html
@@ -26,7 +26,7 @@
 			</td>
 			<td>
 				<input type="text" value="{$customergroup.name}" name="customergroup[name]" size="40" required
-					form="tedit" {tip trigger="name" bold=1}>
+					maxlength="255" form="tedit" {tip trigger="name" bold=1}>
 				<strong>({$customergroup.id|string_format:"%04d"})</strong>
 			</td>
 		</tr>
