improvement: added hint which describes allowed characters in group names

--- a/css/style.less
+++ b/css/style.less
@@ -815,6 +815,14 @@ select {
 
 IMG		{ vertical-align: middle; border: 0; }
 
+.lms-ui-cell-flex {
+	display: inline-flex;
+	align-items: center;
+	> *:not(:last-child) {
+		margin-right: 0.3em;
+	}
+}
+
 .click-menu {
 	//font-size: 100%;
 	padding: 0 0;
