--- a/templates/default/customer/customergroupadd.html
+++ b/templates/default/customer/customergroupadd.html
@@ -22,8 +22,11 @@
 				<strong>{trans("Name:")}</strong>
 			</td>
 			<td>
-				<input type="text" name="customergroupadd[name]" value="{$customergroupadd.name}" size="50" required
-					maxlength="255" form="customergroupadd" {tip trigger="name" bold=1}>
+				<div class="lms-ui-cell-flex">
+					<input type="text" name="customergroupadd[name]" value="{$customergroupadd.name}" size="50" required
+						maxlength="255" form="customergroupadd" {tip trigger="name" bold=1}>
+					{hint mode="toggle" content="Group name can contain letters (with national characters), digits, dots, underscores and dashes."}
+				</div>
 			</td>
 		</tr>
 	</thead>
