--- a/templates/default/node/nodegroupadd.html
+++ b/templates/default/node/nodegroupadd.html
@@ -20,8 +20,11 @@
 				<strong>{trans("Name")}</strong>
 			</td>
 			<td>
-				<input type="text" name="nodegroupadd[name]" value="{$nodegroupadd.name|escape}"
-					maxlength="255" required {tip trigger="name" bold=1}>
+				<div class="lms-ui-cell-flex">
+					<input type="text" name="nodegroupadd[name]" value="{$nodegroupadd.name|escape}"
+						maxlength="255" required {tip trigger="name" bold=1}>
+					{hint mode="toggle" content="Group name can contain letters (with national characters), digits, dots, underscores and dashes."}
+				</div>
 			</td>
 		</tr>
 	</thead>
