improvement: allow to use national characters in customer and node group names (more browser-side validation)

--- a/templates/default/node/nodegroupadd.html
+++ b/templates/default/node/nodegroupadd.html
@@ -22,7 +22,7 @@
 			<td>
 				<div class="lms-ui-cell-flex">
 					<input type="text" name="nodegroupadd[name]" value="{$nodegroupadd.name|escape}"
-						maxlength="255" required {tip trigger="name" bold=1}>
+						maxlength="255" pattern="[\.\-_a-zA-Z0-9\pL]+" required {tip trigger="name" bold=1}>
 					{hint mode="toggle" content="Group name can contain letters (with national characters), digits, dots, underscores and dashes."}
 				</div>
 			</td>
