--- a/templates/default/node/nodegroupedit.html
+++ b/templates/default/node/nodegroupedit.html
@@ -46,7 +46,7 @@
 			<td>
 				<div class="lms-ui-cell-flex">
 					<input type="text" value="{$nodegroup.name|escape}" name="nodegroup[name]"
-						maxlength="255" required form="tedit" {tip trigger="name" bold=1}>
+						maxlength="255" pattern="[\.\-_a-zA-Z0-9\pL]+" required form="tedit" {tip trigger="name" bold=1}>
 					{hint mode="toggle" content="Group name can contain letters (with national characters), digits, dots, underscores and dashes."}
 					<strong>(#{$nodegroup.id})</strong>
 				</div>
