improvement: allow to use national characters in customer and node group names (customer group forms should use submit-type button)

--- a/templates/default/customer/customergroupadd.html
+++ b/templates/default/customer/customergroupadd.html
@@ -45,7 +45,7 @@
 		</tr>
 		<tr>
 			<td class="lms-ui-box-buttons" colspan="3">
-				{button icon="save" label="Submit" onclick="document.customergroupadd.submit();"}
+				{button type="submit" icon="save" label="Submit" form="customergroupadd"}
 				{button icon="cancel" label="Cancel" href="?m=customergrouplist"}
 			</td>
 		</tr>
