--- a/userpanel/modules/documents/templates/setup.html
+++ b/userpanel/modules/documents/templates/setup.html
@@ -158,6 +158,17 @@
 										{trans("New document customer notifications")}
 									</legend>
 									<table>
+										{capture assign="hint"}{strip}
+											Supported substitutions:<br>
+											<br>
+											<strong>%cid%</strong> - customer identifier,<br>
+											<strong>%pin%</strong> - customer pin code,<br>
+											<strong>%customername%</strong> - full customer name,<br>
+											<strong>%docid%</strong> - document identifier,<br>
+											<strong>%date-y%</strong> - date to which we wait for customer action (year),<br>
+											<strong>%date-m%</strong> - date to which we wait for customer action (month),<br>
+											<strong>%date-d%</strong> - date to which we wait for customer action (day).
+										{/strip}{/capture}
 										<tr>
 											<td class="nobr">
 												<label for="new_document_customer_notification_mail_subject">
@@ -165,11 +176,14 @@
 												</label>
 											</td>
 											<td>
-												<input type="text" size="50"
-													name="moduleconfig[new_document_customer_notification_mail_subject]"
-													id="new_document_customer_notification_mail_subject"
-													value="{$moduleconfig.new_document_customer_notification_mail_subject}"
-													{tip text="Enter new document customer notification mail subject"}>
+												<div class="lms-ui-cell-flex">
+													<input type="text" size="50"
+														name="moduleconfig[new_document_customer_notification_mail_subject]"
+														id="new_document_customer_notification_mail_subject"
+														value="{$moduleconfig.new_document_customer_notification_mail_subject}"
+														{tip text="Enter new document customer notification mail subject"}>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 										<tr>
@@ -179,12 +193,15 @@
 												</label>
 											</td>
 											<td>
-												<textarea name="moduleconfig[new_document_customer_notification_mail_body]"
-													id="new_document_customer_notification_mail_body"
-													class="lms-ui-wysiwyg-editor"
-													data-wysiwyg="{if $moduleconfig.new_document_customer_notification_mail_format == 'html'}true{else}false{/if}"
-													cols="60" rows="7" {tip text="Enter new document customer notification mail body"}
-												>{$moduleconfig.new_document_customer_notification_mail_body}</textarea>
+												<div class="lms-ui-cell-flex">
+													<textarea name="moduleconfig[new_document_customer_notification_mail_body]"
+														id="new_document_customer_notification_mail_body"
+														class="lms-ui-wysiwyg-editor"
+														data-wysiwyg="{if $moduleconfig.new_document_customer_notification_mail_format == 'html'}true{else}false{/if}"
+														cols="60" rows="7" {tip text="Enter new document customer notification mail body"}
+													>{$moduleconfig.new_document_customer_notification_mail_body}</textarea>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 										<tr>
@@ -194,16 +211,27 @@
 												</label>
 											</td>
 											<td>
-												<textarea name="moduleconfig[new_document_customer_notification_sms_body]"
-													id="new_document_customer_notification_sms_body"
-													cols="60" rows="7" {tip text="Enter new document customer notification sms body"}
-												>{$moduleconfig.new_document_customer_notification_sms_body}</textarea>
+												<div class="lms-ui-cell-flex">
+													<textarea name="moduleconfig[new_document_customer_notification_sms_body]"
+														id="new_document_customer_notification_sms_body"
+														cols="60" rows="7" {tip text="Enter new document customer notification sms body"}
+													>{$moduleconfig.new_document_customer_notification_sms_body}</textarea>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 									</table>
 								</fieldset>
 							</td>
 						</tr>
+
+						{capture assign="hint"}{strip}
+							Supported substitutions:<br>
+							<br>
+							<strong>%cid%</strong> - customer identifier,<br>
+							<strong>%customername%</strong> - full customer name,<br>
+							<strong>%docid%</strong> - document identifier.
+						{/strip}{/capture}
 
 						<tr>
 							<td class="nobr" colspan="2">
@@ -233,11 +261,14 @@
 												</label>
 											</td>
 											<td>
-												<input type="text" size="50"
-													name="moduleconfig[signed_document_scan_operator_notification_mail_subject]"
-													id="signed_document_scan_operator_notification_mail_subject"
-													value="{$moduleconfig.signed_document_scan_operator_notification_mail_subject}"
-													{tip text="Enter signed document scan operator notification mail subject"}>
+												<div class="lms-ui-cell-flex">
+													<input type="text" size="50"
+														name="moduleconfig[signed_document_scan_operator_notification_mail_subject]"
+														id="signed_document_scan_operator_notification_mail_subject"
+														value="{$moduleconfig.signed_document_scan_operator_notification_mail_subject}"
+														{tip text="Enter signed document scan operator notification mail subject"}>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 										<tr>
@@ -247,12 +278,15 @@
 												</label>
 											</td>
 											<td>
-												<textarea name="moduleconfig[signed_document_scan_operator_notification_mail_body]"
-													id="signed_document_scan_operator_notification_mail_body"
-													class="lms-ui-wysiwyg-editor"
-													data-wysiwyg="{if $moduleconfig.signed_document_scan_operator_notification_mail_format == 'html'}true{else}false{/if}"
-													cols="60" rows="7" {tip text="Enter signed document scan operator notification mail body"}
-												>{$moduleconfig.signed_document_scan_operator_notification_mail_body}</textarea>
+												<div class="lms-ui-cell-flex">
+													<textarea name="moduleconfig[signed_document_scan_operator_notification_mail_body]"
+														id="signed_document_scan_operator_notification_mail_body"
+														class="lms-ui-wysiwyg-editor"
+														data-wysiwyg="{if $moduleconfig.signed_document_scan_operator_notification_mail_format == 'html'}true{else}false{/if}"
+														cols="60" rows="7" {tip text="Enter signed document scan operator notification mail body"}
+													>{$moduleconfig.signed_document_scan_operator_notification_mail_body}</textarea>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 									</table>
@@ -274,11 +308,14 @@
 												</label>
 											</td>
 											<td>
-												<input type="text" size="50"
-													name="moduleconfig[signed_document_scan_customer_notification_mail_subject]"
-													id="signed_document_scan_customer_notification_mail_subject"
-													value="{$moduleconfig.signed_document_scan_customer_notification_mail_subject}"
-													{tip text="Enter signed document scan customer notification mail subject"}>
+												<div class="lms-ui-cell-flex">
+													<input type="text" size="50"
+														name="moduleconfig[signed_document_scan_customer_notification_mail_subject]"
+														id="signed_document_scan_customer_notification_mail_subject"
+														value="{$moduleconfig.signed_document_scan_customer_notification_mail_subject}"
+														{tip text="Enter signed document scan customer notification mail subject"}>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 										<tr>
@@ -288,12 +325,15 @@
 												</label>
 											</td>
 											<td>
-												<textarea name="moduleconfig[signed_document_scan_customer_notification_mail_body]"
-													id="signed_document_scan_customer_notification_mail_body"
-													class="lms-ui-wysiwyg-editor"
-													data-wysiwyg="{if $moduleconfig.signed_document_scan_customer_notification_mail_format == 'html'}true{else}false{/if}"
-													cols="60" rows="7" {tip text="Enter signed document scan customer notification mail body"}
-												>{$moduleconfig.signed_document_scan_customer_notification_mail_body}</textarea>
+												<div class="lms-ui-cell-flex">
+													<textarea name="moduleconfig[signed_document_scan_customer_notification_mail_body]"
+														id="signed_document_scan_customer_notification_mail_body"
+														class="lms-ui-wysiwyg-editor"
+														data-wysiwyg="{if $moduleconfig.signed_document_scan_customer_notification_mail_format == 'html'}true{else}false{/if}"
+														cols="60" rows="7" {tip text="Enter signed document scan customer notification mail body"}
+													>{$moduleconfig.signed_document_scan_customer_notification_mail_body}</textarea>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 									</table>
@@ -315,11 +355,14 @@
 												</label>
 											</td>
 											<td>
-												<input type="text" size="50"
-													name="moduleconfig[document_approval_customer_notification_mail_subject]"
-													id="document_approval_customer_notification_mail_subject"
-													value="{$moduleconfig.document_approval_customer_notification_mail_subject}"
-													{tip text="Enter document approval customer notification mail subject"}>
+												<div class="lms-ui-cell-flex">
+													<input type="text" size="50"
+														name="moduleconfig[document_approval_customer_notification_mail_subject]"
+														id="document_approval_customer_notification_mail_subject"
+														value="{$moduleconfig.document_approval_customer_notification_mail_subject}"
+														{tip text="Enter document approval customer notification mail subject"}>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 										<tr>
@@ -329,18 +372,27 @@
 												</label>
 											</td>
 											<td>
-												<textarea name="moduleconfig[document_approval_customer_notification_mail_body]"
-													id="document_approval_customer_notification_mail_body"
-													class="lms-ui-wysiwyg-editor"
-													data-wysiwyg="{if $moduleconfig.document_approval_customer_notification_mail_format == 'html'}true{else}false{/if}"
-													cols="60" rows="7" {tip text="Enter document approval customer notification mail body"}
-												>{$moduleconfig.document_approval_customer_notification_mail_body}</textarea>
+												<div class="lms-ui-cell-flex">
+													<textarea name="moduleconfig[document_approval_customer_notification_mail_body]"
+														id="document_approval_customer_notification_mail_body"
+														class="lms-ui-wysiwyg-editor"
+														data-wysiwyg="{if $moduleconfig.document_approval_customer_notification_mail_format == 'html'}true{else}false{/if}"
+														cols="60" rows="7" {tip text="Enter document approval customer notification mail body"}
+													>{$moduleconfig.document_approval_customer_notification_mail_body}</textarea>
+													{hint mode="toggle" content=$hint}
+												</div>
 											</td>
 										</tr>
 									</table>
 								</fieldset>
 							</td>
 						</tr>
+
+						{capture assign="hint"}{strip}
+							Supported substitutions:<br>
+							<br>
+							<strong>%password%</strong> - replaced by one-time password sent to customer via SMS.
+						{/strip}{/capture}
 
 						<tr>
 							<td class="nobr">
@@ -349,10 +401,13 @@
 								</label>
 							</td>
 							<td class="nobr">
-								<textarea name="moduleconfig[document_approval_customer_onetime_password_sms_body]"
-									id="document_approval_customer_onetime_password_sms_body"
-									cols="60" rows="7" {tip text="Enter document approval customer one-time password sms body"}
-								>{$moduleconfig.document_approval_customer_onetime_password_sms_body}</textarea>
+								<div class="lms-ui-cell-flex">
+									<textarea name="moduleconfig[document_approval_customer_onetime_password_sms_body]"
+										id="document_approval_customer_onetime_password_sms_body"
+										cols="60" rows="7" {tip text="Enter document approval customer one-time password sms body"}
+									>{$moduleconfig.document_approval_customer_onetime_password_sms_body}</textarea>
+									{hint mode="toggle" content=$hint}
+								</div>
 							</td>
 						</tr>
 
