improvement: small visual improvement of fieldsets

--- a/css/style.less
+++ b/css/style.less
@@ -2528,6 +2528,9 @@ table.lms-ui-mac-address-selection {
 fieldset {
 	display: inline;
 	border-radius: 5px;
+	border-width: 1px;
+	border-style: dotted;
+	border-color: grey;
 }
 
 .lms-ui-separated-rows {
