--- a/templates/default/numberplan/numberplanedit.html
+++ b/templates/default/numberplan/numberplanedit.html
@@ -21,7 +21,17 @@
 			<TD>
 				<input type="text" name="numberplanedit[template]" value="{$numberplanedit.template|escape}"
 					{tip trigger="template"}>
-				{capture assign="template_hint"}Enter number template<br><br>Supported substitution symbols:<br><strong>%N</strong> - document number,<br><strong>%m</strong> - month number (always two digits),<br><strong>%Y</strong> - year number (always four digits),<br><strong>%C</strong> - customer id; if this symbol is present then customer dedicated numbering applies.<br><br>Other symbols can be used which are described in PHP <strong>strftime<strong> function documentation.{/capture}
+				{capture assign="template_hint"}{strip}
+					Enter number template<br>
+					<br>
+					Supported substitution symbols:<br>
+					<strong>%N</strong> - document number,<br>
+					<strong>%m</strong> - month number (always two digits),<br>
+					<strong>%Y</strong> - year number (always four digits),<br>
+					<strong>%C</strong> - customer id; if this symbol is present then customer dedicated numbering applies.<br>
+					<br>
+					Other symbols can be used which are described in PHP <a href="https://php.net/strftime"><strong>strftime</strong></a> function documentation.
+				{/strip}{/capture}
 				{hint content=$template_hint}
 			</TD>
 		</TR>
